templates/speckle-server_template.yaml
---
# Source: speckle-server/templates/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speckle-frontend
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/component: speckle-frontend
    app: speckle-frontend
    app.kubernetes.io/name: speckle-frontend
    app.kubernetes.io/instance: release-name
    project: speckle-server
spec:
  selector:
    app: speckle-frontend
    project: speckle-server
  ports:
    - protocol: TCP
      name: www
      port: 8080
      targetPort: www
---
# Source: speckle-server/templates/monitoring/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speckle-monitoring-metrics
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-monitoring
    app.kubernetes.io/name: speckle-monitoring
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-monitoring
spec:
  selector:
    app: speckle-monitoring
    project: speckle-server
  ports:
    - protocol: TCP
      name: web
      port: 9092
      targetPort: metrics
---
# Source: speckle-server/templates/objects/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speckle-objects
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-objects
    app.kubernetes.io/name: speckle-objects
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-objects
spec:
  selector:
    app: speckle-objects
    project: speckle-server
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: http
---
# Source: speckle-server/templates/preview_service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speckle-preview-service-metrics
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-preview-service
    app.kubernetes.io/name: speckle-preview-service
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-preview-service
spec:
  selector:
    app: speckle-preview-service
    project: speckle-server
  ports:
    - protocol: TCP
      name: web
      port: 9094
      targetPort: metrics
---
# Source: speckle-server/templates/server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speckle-server
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-server
    app.kubernetes.io/name: speckle-server
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-server
spec:
  selector:
    app: speckle-server
    project: speckle-server
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: http
---
# Source: speckle-server/templates/webhook_service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speckle-webhook-service-metrics
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/component: speckle-webhook-service
    app: speckle-webhook-service
    app.kubernetes.io/name: speckle-webhook-service
    app.kubernetes.io/instance: release-name
    project: speckle-server
spec:
  selector:
    app: speckle-webhook-service
    project: speckle-server
  ports:
    - protocol: TCP
      name: web
      port: 9095
      targetPort: metrics
---
# Source: speckle-server/templates/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speckle-frontend
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/component: speckle-frontend
    app: speckle-frontend
    app.kubernetes.io/name: speckle-frontend
    app.kubernetes.io/instance: release-name
    project: speckle-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speckle-frontend
      project: speckle-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: speckle-server-2.18.16
        app.kubernetes.io/version: "2.18.16"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: speckle-server
        app.kubernetes.io/component: speckle-frontend
        app: speckle-frontend
        app.kubernetes.io/name: speckle-frontend
        app.kubernetes.io/instance: release-name
        project: speckle-server
    spec:
      containers:
      - name: main
        image: speckle/speckle-frontend:2.18.16
        imagePullPolicy: IfNotPresent

        ports:
          - name: www
            containerPort: 8080
            protocol: TCP

        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi

        # Allow for k8s to remove the pod from the service endpoints to stop receive traffic
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "5"]

        readinessProbe:
          httpGet:
            path: /
            port: www
          initialDelaySeconds: 5
          periodSeconds: 5

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 20000

        volumeMounts:
          - name: openresty-temp
            mountPath: /bitnami/openresty
          - name: openresty-conf
            mountPath: /opt/bitnami/openresty/nginx/conf/
          - name: openresty-logs
            mountPath: /opt/bitnami/openresty/nginx/logs/

      priorityClassName: high-priority
      serviceAccountName: speckle-frontend

      volumes:
        - name: openresty-temp
          emptyDir: {}
        - name: openresty-conf
          emptyDir: {}
        - name: openresty-logs
          emptyDir: {}
---
# Source: speckle-server/templates/monitoring/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speckle-monitoring
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-monitoring
    app.kubernetes.io/name: speckle-monitoring
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speckle-monitoring
      project: speckle-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: speckle-server-2.18.16
        app.kubernetes.io/version: "2.18.16"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: speckle-server
        app: speckle-monitoring
        app.kubernetes.io/name: speckle-monitoring
        app.kubernetes.io/instance: release-name
        project: speckle-server
        app.kubernetes.io/component: speckle-monitoring
    spec:
      containers:
      - name: main
        image: speckle/speckle-monitor-deployment:2.18.16
        imagePullPolicy: IfNotPresent

        ports:
          - name: metrics
            containerPort: 9092
            protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 512Mi

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 20000

      priorityClassName: low-priority
      serviceAccountName: speckle-monitoring
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 20000
        fsGroup: 25000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault
---
# Source: speckle-server/templates/objects/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speckle-objects
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-objects
    app.kubernetes.io/name: speckle-objects
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-objects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speckle-objects
      project: speckle-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: speckle-server-2.18.16
        app.kubernetes.io/version: "2.18.16"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: speckle-server
        app: speckle-objects
        app.kubernetes.io/name: speckle-objects
        app.kubernetes.io/instance: release-name
        project: speckle-server
        app.kubernetes.io/component: speckle-objects
    spec:
      containers:
      - name: main
        image: speckle/speckle-server:2.18.16
        imagePullPolicy: IfNotPresent
        args: #overwrites the Dockerfile CMD statement
          - "bin/www"
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP

        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits:
            cpu: 1500m
            memory: 3Gi

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 20000

        volumeMounts:
          - mountPath: /tmp
            name: tmp

        # Allow for k8s to remove the pod from the service endpoints to stop receive traffic
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "5"]

        livenessProbe:
          # account for long-running migrations
          initialDelaySeconds: 600
          periodSeconds: 60
          timeoutSeconds: 10
          exec:
            command:
              - node
              - -e
              - "try { require('node:http').request({headers: {'Content-Type': 'application/json'}, port:3000, hostname:'127.0.0.1', path:'/graphql?query={serverInfo{version}}', method: 'GET', timeout: 2000 }, (res) => { body = ''; res.on('data', (chunk) => {body += chunk;}); res.on('end', () => {process.exit(res.statusCode != 200 || body.toLowerCase().includes('error'));}); }).end(); } catch { process.exit(1); }"

        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
          exec:
            command:
              - node
              - -e
              - "try { require('node:http').request({headers: {'Content-Type': 'application/json'}, port:3000, hostname:'127.0.0.1', path:'/graphql?query={serverInfo{version}}', method: 'GET', timeout: 2000 }, (res) => { body = ''; res.on('data', (chunk) => {body += chunk;}); res.on('end', () => {process.exit(res.statusCode != 200 || body.toLowerCase().includes('error'));}); }).end(); } catch { process.exit(1); }"

      priorityClassName: high-priority

      securityContext:
        runAsNonRoot: true
        runAsUser: 20000
        fsGroup: 25000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: speckle-objects
      terminationGracePeriodSeconds: 310
      volumes:
        - name: tmp
          emptyDir: {}
---
# Source: speckle-server/templates/preview_service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speckle-preview-service
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-preview-service
    app.kubernetes.io/name: speckle-preview-service
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-preview-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speckle-preview-service
      project: speckle-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: speckle-server-2.18.16
        app.kubernetes.io/version: "2.18.16"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: speckle-server
        app: speckle-preview-service
        app.kubernetes.io/name: speckle-preview-service
        app.kubernetes.io/instance: release-name
        project: speckle-server
        app.kubernetes.io/component: speckle-preview-service
    spec:
      containers:
      - name: main
        image: speckle/speckle-preview-service:2.18.16
        imagePullPolicy: IfNotPresent

        ports:
          - name: metrics
            containerPort: 9094
            protocol: TCP

        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 60
          exec:
            command:
              - node
              - -e
              - process.exit(Date.now() - require('fs').readFileSync('/tmp/last_successful_query', 'utf8') > 3600 * 1000)

        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 1000m
            memory: 4Gi

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 20000

        volumeMounts:
          - mountPath: /tmp
            name: tmp
          - mountPath: /.cache/puppeteer
            name: puppeteer-cache

      priorityClassName: low-priority
      serviceAccountName: speckle-preview-service

      securityContext:
        runAsNonRoot: true
        runAsUser: 20000
        fsGroup: 25000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault

      # Should be > preview generation time ( 1 hour for good measure )
      terminationGracePeriodSeconds: 3600

      volumes:
        - name: tmp
          emptyDir: {}
        - name: puppeteer-cache
          emptyDir: {}
---
# Source: speckle-server/templates/server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speckle-server
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app: speckle-server
    app.kubernetes.io/name: speckle-server
    app.kubernetes.io/instance: release-name
    project: speckle-server
    app.kubernetes.io/component: speckle-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speckle-server
      project: speckle-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: speckle-server-2.18.16
        app.kubernetes.io/version: "2.18.16"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: speckle-server
        app: speckle-server
        app.kubernetes.io/name: speckle-server
        app.kubernetes.io/instance: release-name
        project: speckle-server
        app.kubernetes.io/component: speckle-server
    spec:
      containers:
      - name: main
        image: speckle/speckle-server:2.18.16
        imagePullPolicy: IfNotPresent
        args: #overwrites the Dockerfile CMD statement
          - "bin/www"
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP

        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits:
            cpu: 1500m
            memory: 3Gi

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 20000

        volumeMounts:
          - mountPath: /tmp
            name: tmp

        # Allow for k8s to remove the pod from the service endpoints to stop receive traffic
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "5"]

        livenessProbe:
          # account for long-running migrations
          initialDelaySeconds: 600
          periodSeconds: 60
          timeoutSeconds: 10
          exec:
            command:
              - node
              - -e
              - "try { require('node:http').request({headers: {'Content-Type': 'application/json'}, port:3000, hostname:'127.0.0.1', path:'/graphql?query={serverInfo{version}}', method: 'GET', timeout: 2000 }, (res) => { body = ''; res.on('data', (chunk) => {body += chunk;}); res.on('end', () => {process.exit(res.statusCode != 200 || body.toLowerCase().includes('error'));}); }).end(); } catch { process.exit(1); }"

        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
          exec:
            command:
              - node
              - -e
              - "try { require('node:http').request({headers: {'Content-Type': 'application/json'}, port:3000, hostname:'127.0.0.1', path:'/graphql?query={serverInfo{version}}', method: 'GET', timeout: 2000 }, (res) => { body = ''; res.on('data', (chunk) => {body += chunk;}); res.on('end', () => {process.exit(res.statusCode != 200 || body.toLowerCase().includes('error'));}); }).end(); } catch { process.exit(1); }"

      priorityClassName: high-priority

      securityContext:
        runAsNonRoot: true
        runAsUser: 20000
        fsGroup: 25000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: speckle-server
      terminationGracePeriodSeconds: 310
      volumes:
        - name: tmp
          emptyDir: {}
---
# Source: speckle-server/templates/webhook_service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speckle-webhook-service
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/component: speckle-webhook-service
    app: speckle-webhook-service
    app.kubernetes.io/name: speckle-webhook-service
    app.kubernetes.io/instance: release-name
    project: speckle-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speckle-webhook-service
      project: speckle-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: speckle-server-2.18.16
        app.kubernetes.io/version: "2.18.16"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: speckle-server
        app.kubernetes.io/component: speckle-webhook-service
        app: speckle-webhook-service
        app.kubernetes.io/name: speckle-webhook-service
        app.kubernetes.io/instance: release-name
        project: speckle-server
    spec:
      containers:
      - name: main
        image: speckle/speckle-webhook-service:2.18.16
        imagePullPolicy: IfNotPresent

        ports:
          - name: metrics
            containerPort: 9095
            protocol: TCP

        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 60
          exec:
            command:
              - /nodejs/bin/node
              - -e
              - process.exit(Date.now() - require('fs').readFileSync('/tmp/last_successful_query', 'utf8') > 30 * 1000)

        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 1000m
            memory: 4Gi

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 20000

        volumeMounts:
          - mountPath: /tmp
            name: tmp

      priorityClassName: low-priority
      serviceAccountName: speckle-webhook-service

      securityContext:
        runAsNonRoot: true
        runAsUser: 20000
        fsGroup: 25000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault

      # Should be > webhook max call time ( ~= 10 seconds )
      terminationGracePeriodSeconds: 30

      volumes:
        - name: tmp
          emptyDir: {}
---
# Source: speckle-server/templates/master.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speckle-server
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/name: speckle-server
    app.kubernetes.io/instance: release-name
    project: speckle-server
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.org/client-max-body-size: "100m"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: server-tls
  rules:
  - host: localhost
---
# Source: speckle-server/templates/minion.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speckle-server-minion
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/name: speckle-server
    app.kubernetes.io/instance: release-name
    project: speckle-server
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: speckle-frontend
            port:
              name: www
      - pathType: Exact
        path: "/(graphql|explorer|(auth/.*)|(static/.*))"
        backend:
          service:
            name: speckle-server
            port:
              name: web
      - pathType: Exact
        path: "/((objects/.*)|(api/.*)|(preview/.*))"
        backend:
          service:
            name: speckle-objects
            port:
              name: web
---
# Source: speckle-server/templates/redirect.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speckle-server-redirect
  namespace: speckle-test
  labels:
    helm.sh/chart: speckle-server-2.18.16
    app.kubernetes.io/version: "2.18.16"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: speckle-server
    app.kubernetes.io/name: speckle-server
    app.kubernetes.io/instance: release-name
    project: speckle-server
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/rewrite-target: / # redirects every path defined in this ingress to root
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Exact
        path: "/metrics"
        backend:
          service:
            name: speckle-frontend
            port:
              name: www
      - pathType: Exact
        path: "/api/status"
        backend:
          service:
            name: speckle-frontend
            port:
              name: www
